--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,23 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 :root {
-  --blue:#2E1D5F;
-  --light-blue: #5A37BC;
-  --purple: #9B59B6;
+  --blue: #2e1d5f;
+  --light-blue: #5a37bc;
+  --purple: #6a9cfd;
   --light-purple: rgba(155, 89, 182, 0.3);
-  --yellow: #F1C40F;
+  --yellow: #89b449;
   --dark-yellow: #bf9900;
   --light-yellow: rgba(234, 196, 46, 0.3);
   --black: #000000;
   --dark-grey: #424242;
   --light-grey: #acacac;
-  --white: #FFFFFF;
+  --white: #ffffff;
   --grey: #f5f5f5;
-  --green: #09D241;
+  --green: #09d241;
   --dark-green: #1d8039;
   --red: #ff0000;
   --dark-red: #b40606;
-  --pink: #B3005E;
+  --pink: #b3005e;
   --light-pink: #db7bb2;
+  --secondary: #953e67;
 }
 * {
   box-sizing: border-box;
