--- a/client/src/scss/header.scss
+++ b/client/src/scss/header.scss
@@ -1,23 +1,23 @@
 .header {
-    width: 100%;
-    height: 60px;
-    position: absolute;
-    z-index: 10;
+  width: 100%;
+  height: 60px;
+  position: absolute;
+  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 15px;
+  .avatar {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 15px;
-    .avatar {
-        display: flex;
-        color: var(--white);
-        img {
-            width: 45px;
-            height: 45px;
-            border-radius: 50%;
-            margin-right: 5px;
-        }
+    color: var(--white);
+    img {
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+      margin-right: 5px;
     }
-    .icon {
-        
-    }
+  }
+  .add-house {
+    // background-color: var(--yellow);
+  }
 }
